c/sedona-tg/src/bindings/x86_64-pc-windows-gnu.rs

unsafe extern "C" {
    pub fn tg_geom_num_geometries(geom: *const tg_geom) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_geom_geometry_at(
        geom: *const tg_geom,
        index: ::std::os::raw::c_int,
    ) -> *const tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_extra_json(geom: *const tg_geom) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tg_geom_is_empty(geom: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_dims(geom: *const tg_geom) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_geom_has_z(geom: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_has_m(geom: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_z(geom: *const tg_geom) -> f64;
}
unsafe extern "C" {
    pub fn tg_geom_m(geom: *const tg_geom) -> f64;
}
unsafe extern "C" {
    pub fn tg_geom_extra_coords(geom: *const tg_geom) -> *const f64;
}
unsafe extern "C" {
    pub fn tg_geom_num_extra_coords(geom: *const tg_geom) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_geom_memsize(geom: *const tg_geom) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_search(
        geom: *const tg_geom,
        rect: tg_rect,
        iter: ::std::option::Option<
            unsafe extern "C" fn(
                geom: *const tg_geom,
                index: ::std::os::raw::c_int,
                udata: *mut ::std::os::raw::c_void,
            ) -> bool,
        >,
        udata: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn tg_geom_fullrect(
        geom: *const tg_geom,
        min: *mut f64,
        max: *mut f64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_geom_equals(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_intersects(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_disjoint(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_contains(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_within(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_covers(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_coveredby(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_touches(a: *const tg_geom, b: *const tg_geom) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_intersects_rect(a: *const tg_geom, b: tg_rect) -> bool;
}
unsafe extern "C" {
    pub fn tg_geom_intersects_xy(a: *const tg_geom, x: f64, y: f64) -> bool;
}
unsafe extern "C" {
    pub fn tg_parse_geojson(geojson: *const ::std::os::raw::c_char) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_geojsonn(geojson: *const ::std::os::raw::c_char, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_geojson_ix(
        geojson: *const ::std::os::raw::c_char,
        ix: tg_index,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_geojsonn_ix(
        geojson: *const ::std::os::raw::c_char,
        len: usize,
        ix: tg_index,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wkt(wkt: *const ::std::os::raw::c_char) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wktn(wkt: *const ::std::os::raw::c_char, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wkt_ix(wkt: *const ::std::os::raw::c_char, ix: tg_index) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wktn_ix(
        wkt: *const ::std::os::raw::c_char,
        len: usize,
        ix: tg_index,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wkb(wkb: *const u8, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_wkb_ix(wkb: *const u8, len: usize, ix: tg_index) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_hex(hex: *const ::std::os::raw::c_char) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_hexn(hex: *const ::std::os::raw::c_char, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_hex_ix(hex: *const ::std::os::raw::c_char, ix: tg_index) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_hexn_ix(
        hex: *const ::std::os::raw::c_char,
        len: usize,
        ix: tg_index,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_geobin(geobin: *const u8, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_geobin_ix(geobin: *const u8, len: usize, ix: tg_index) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse(data: *const ::std::os::raw::c_void, len: usize) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_parse_ix(
        data: *const ::std::os::raw::c_void,
        len: usize,
        ix: tg_index,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_error(geom: *const tg_geom) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn tg_geobin_fullrect(
        geobin: *const u8,
        len: usize,
        min: *mut f64,
        max: *mut f64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn tg_geobin_rect(geobin: *const u8, len: usize) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_geobin_point(geobin: *const u8, len: usize) -> tg_point;
}
unsafe extern "C" {
    pub fn tg_geom_geojson(
        geom: *const tg_geom,
        dst: *mut ::std::os::raw::c_char,
        n: usize,
    ) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_wkt(geom: *const tg_geom, dst: *mut ::std::os::raw::c_char, n: usize) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_wkb(geom: *const tg_geom, dst: *mut u8, n: usize) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_hex(geom: *const tg_geom, dst: *mut ::std::os::raw::c_char, n: usize) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_geobin(geom: *const tg_geom, dst: *mut u8, n: usize) -> usize;
}
unsafe extern "C" {
    pub fn tg_geom_new_point_z(point: tg_point, z: f64) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_point_m(point: tg_point, m: f64) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_point_zm(point: tg_point, z: f64, m: f64) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_point_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_linestring_z(
        line: *const tg_line,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_linestring_m(
        line: *const tg_line,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_linestring_zm(
        line: *const tg_line,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_linestring_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_polygon_z(
        poly: *const tg_poly,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_polygon_m(
        poly: *const tg_poly,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_polygon_zm(
        poly: *const tg_poly,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_polygon_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipoint_z(
        points: *const tg_point,
        npoints: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipoint_m(
        points: *const tg_point,
        npoints: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipoint_zm(
        points: *const tg_point,
        npoints: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipoint_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multilinestring_z(
        lines: *const *const tg_line,
        nlines: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multilinestring_m(
        lines: *const *const tg_line,
        nlines: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multilinestring_zm(
        lines: *const *const tg_line,
        nlines: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multilinestring_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipolygon_z(
        polys: *const *const tg_poly,
        npolys: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipolygon_m(
        polys: *const *const tg_poly,
        npolys: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipolygon_zm(
        polys: *const *const tg_poly,
        npolys: ::std::os::raw::c_int,
        extra_coords: *const f64,
        ncoords: ::std::os::raw::c_int,
    ) -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_multipolygon_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_geom_new_geometrycollection_empty() -> *mut tg_geom;
}
unsafe extern "C" {
    pub fn tg_point_rect(point: tg_point) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_point_intersects_rect(a: tg_point, b: tg_rect) -> bool;
}
unsafe extern "C" {
    pub fn tg_segment_rect(s: tg_segment) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_segment_intersects_segment(a: tg_segment, b: tg_segment) -> bool;
}
unsafe extern "C" {
    pub fn tg_rect_expand(rect: tg_rect, other: tg_rect) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_rect_expand_point(rect: tg_rect, point: tg_point) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_rect_center(rect: tg_rect) -> tg_point;
}
unsafe extern "C" {
    pub fn tg_rect_intersects_rect(a: tg_rect, b: tg_rect) -> bool;
}
unsafe extern "C" {
    pub fn tg_rect_intersects_point(a: tg_rect, b: tg_point) -> bool;
}
unsafe extern "C" {
    pub fn tg_ring_new(points: *const tg_point, npoints: ::std::os::raw::c_int) -> *mut tg_ring;
}
unsafe extern "C" {
    pub fn tg_ring_new_ix(
        points: *const tg_point,
        npoints: ::std::os::raw::c_int,
        ix: tg_index,
    ) -> *mut tg_ring;
}
unsafe extern "C" {
    pub fn tg_ring_free(ring: *mut tg_ring);
}
unsafe extern "C" {
    pub fn tg_ring_clone(ring: *const tg_ring) -> *mut tg_ring;
}
unsafe extern "C" {
    pub fn tg_ring_copy(ring: *const tg_ring) -> *mut tg_ring;
}
unsafe extern "C" {
    pub fn tg_ring_memsize(ring: *const tg_ring) -> usize;
}
unsafe extern "C" {
    pub fn tg_ring_rect(ring: *const tg_ring) -> tg_rect;
}
unsafe extern "C" {
    pub fn tg_ring_num_points(ring: *const tg_ring) -> ::std::os::raw::c_int;
}
